Adding phone properties for employees

--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -1,6 +1,7 @@
 # Label Resources
 label.search.name=Name 
 label.search.ssNum=Social Security Number
+label.search.phone=Phone
 # Error Resources
 error.search.criteria.missing=Search Criteria Missing 
 error.search.ssNum.invalid=Invalid Social Security Number
