--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -5,6 +5,7 @@ label.search.phone=Phone
 # Error Resources
 error.search.criteria.missing=Search Criteria Missing 
 error.search.ssNum.invalid=Invalid Social Security Number
+error.search.phone.invalid=Invalid Phone Number
 errors.header=<font color="red"><cTypeface:Bold>Validation Error(s)</b></font><ul> 
 errors.footer=</ul><hr width="100%" size="1" noshade="true">
 errors.prefix=<li>
