--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -6,10 +6,14 @@ label.search.phone=Phone
 error.search.criteria.missing=Search Criteria Missing 
 error.search.ssNum.invalid=Invalid Social Security Number
 error.search.phone.invalid=Invalid Phone Number
+error.add.employees.false=Employee has not add
+error.delete.employees.false=Employee has not delete
+error.update.employees.false=Employee has not update
 errors.header=<font color="red"><cTypeface:Bold>Validation Error(s)</b></font><ul> 
 errors.footer=</ul><hr width="100%" size="1" noshade="true">
 errors.prefix=<li>
 errors.suffix=</li>
+error.show.employees.notfound=No any employee found
 # -- standard errors --
 errors.header=<UL>
 errors.prefix=<LI>
