--- a/src/java/com/myapp/struts/ApplicationResource.properties
+++ b/src/java/com/myapp/struts/ApplicationResource.properties
@@ -6,6 +6,7 @@ label.search.phone=Phone
 error.search.criteria.missing=Search Criteria Missing 
 error.search.ssNum.invalid=Invalid Social Security Number
 error.search.phone.invalid=Invalid Phone Number
+error.search.name.invalid=Invalid Name
 error.add.employees.false=Employee has not add
 error.delete.employees.false=Employee has not delete
 error.update.employees.false=Employee has not update
@@ -39,7 +40,13 @@ errors.cancel=Operation cancelled.
 errors.detail={0}
 errors.general=The process did not complete. Details should follow.
 errors.token=Request could not be completed. Operation is not in sequence.
-# -- welcome --
-welcome.title=Struts Application
-welcome.heading=Struts Applications in Netbeans!
-welcome.message=It's easy to create Struts applications with NetBeans.
+# -- title --
+title.add.employee=Add Employee
+title.delete.employee=Delete Employee
+title.search.employee=Search Employee
+title.show.employee=Show all Employees
+title.update.employee=Update Employee
+title.portal=Human resources portal
+title.portal.employee=Portal for Employee Management
+# -- info --
+info.ssnum.employee=never change
